--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -3,14 +3,26 @@ name: Docker Image CI
 on:
   push:
     branches: [ master ]
+  pull_request:
+    branches: [ master ]
 
 jobs:
-
-  build:
-
+  docker:
     runs-on: ubuntu-latest
-
     steps:
-    - uses: actions/checkout@v2
-    - name: Build the Docker image
-      run: docker build . --file Dockerfile --tag php:$(date +%s)
+      -
+        name: dockerhub-login
+        uses: docker/login-action@v1 
+        with:
+          username: ${{ secrets.DOCKERHUB_USERNAME }}
+          password: ${{ secrets.DOCKERHUB_PASSWORD }}
+      -
+        name: build-push
+        id: docker_build
+        uses: docker/build-push-action@v2
+        with:
+          push: true
+          tags: allefebv/cloud-1:latest
+      -
+        name: digest
+        run: echo ${{ steps.docker_build.outputs.digest }}
