--- a/docker-conf/xdebug.ini
+++ b/docker-conf/xdebug.ini
@@ -1,11 +1,11 @@
-xdebug.remote_enable=1
+xdebug.mode=debug
 xdebug.idekey=VSCODE
-xdebug.remote_port=9000
-xdebug.remote_autostart=1
+xdebug.client_port=9000
+xdebug.start_with_request=yes
 
 ; Docker on Linux
-xdebug.remote_connect_back=1
-xdebug.remote_host=host.docker.internal
+xdebug.discover_client_host=1
+; xdebug.remote_host=host.docker.internal
 
 ; Docker for MAC
 ; xdebug.remote_connect_back=0
