--- a/kubernetes-conf/dockerhub-secret.yaml
+++ b/kubernetes-conf/dockerhub-secret.yaml
@@ -1,7 +1,7 @@
 apiVersion: v1
 kind: Secret
 metadata:
-  name: docker-secret
+  name: dockerhub-secret
 type: kubernetes.io/dockerconfigjson
 data:
   .dockerconfigjson: ***REMOVED***
