--- a/docker-conf/xdebug.ini
+++ b/docker-conf/xdebug.ini
@@ -1,12 +1,16 @@
 xdebug.mode=debug
 xdebug.idekey=VSCODE
-xdebug.client_port=9000
 xdebug.start_with_request=yes
 
-; Docker on Linux
-xdebug.discover_client_host=1
-; xdebug.remote_host=host.docker.internal
-
-; Docker for MAC
+; -- v2
+; xdebug.remote_host=6.tcp.ngrok.io
+; xdebug.remote_port=19158
 ; xdebug.remote_connect_back=0
-; xdebug.remote_host=docker.for.mac.localhost
+; xdebug.remote_log=/var/log/xdebug.log
+
+
+; -- v3
+xdebug.client_host=6.tcp.ngrok.io
+xdebug.client_port=19158
+xdebug.discover_client_host=0
+xdebug.log=/var/log/xdebug.log
