--- a/deployment/roles/k8s-cluster-init/common/tasks/main.yaml
+++ b/deployment/roles/k8s-cluster-init/common/tasks/main.yaml
@@ -1,10 +1,3 @@
-# - name: Add ansible user
-#   ansible.builtin.user:
-#     become: yes
-#     name: ansible
-#     state: present
-#     create_home: yes
-
 - name: Disable swap permanently
   ansible.posix.mount:
     name: "{{ item }}"
@@ -63,9 +56,9 @@
   blockinfile:
     path: /etc/sysctl.conf
     block: |
-      net.bridge.bridge-nf-call-iptables=1
-      net.ipv4.ip_forward=1
-      net.ipv6.conf.all.disable_ipv6 = 1
+      net.bridge.bridge-nf-call-ip6tables = 1
+      net.bridge.bridge-nf-call-iptables = 1
+      net.ipv4.ip_forward = 1
   notify:
   - sysctl_exec
 
