--- a/deployment/roles/k8s-cluster-init/masters/tasks/main.yaml
+++ b/deployment/roles/k8s-cluster-init/masters/tasks/main.yaml
@@ -17,13 +17,31 @@
     remote_src: yes
     owner: vagrant
 
+- name: Install pip3 for next task
+  become: yes
+  ansible.builtin.apt:
+    name: python3-pip
+    state: present
+    update_cache: yes
+
+
+- name: Install OpenShift for Ansible k8s manipulations
+  become: yes
+  pip:
+    executable: pip3
+    name: openshift
+    state: present
+
 - name: Install CNI (flannel) for pod networking
-  ansible.builtin.command:
-    argv: 
-      - kubectl
-      - apply
-      - -f
-      - https://raw.githubusercontent.com/coreos/flannel/master/Documentation/kube-flannel.yml
+  import_tasks: networking.yaml
+
+# - name: Install CNI (flannel) for pod networking
+#   ansible.builtin.command:
+#     argv: 
+#       - kubectl
+#       - apply
+#       - -f
+#       - https://raw.githubusercontent.com/coreos/flannel/master/Documentation/kube-flannel.yml
 
 - name: Generate join command
   become: yes
@@ -33,21 +51,8 @@
       - token
       - create
       - --print-join-command
-  register: join_command
+  register: join_command_raw
 
-- name: Debug1
-  become: yes
-  ansible.builtin.debug:
-    var:
-      - "join_command.stdout_lines[0]"
-  tags:
-    - test
-
-- name: Debug2
-  become: yes
-  ansible.builtin.debug:
-    var:
-      - "hostvars['master'].join_command.stdout_lines[0]"
-      - "join_command"
-  tags:
-    - test
+- name: Set join command
+  set_fact:
+    join_command: "{{ join_command_raw.stdout_lines[0] }}"
