--- a/deployment/roles/k8s-cluster-init/masters/tasks/metallb-resources.yaml
+++ b/deployment/roles/k8s-cluster-init/masters/tasks/metallb-resources.yaml
@@ -21,3 +21,20 @@
       type: Opaque
       data:
         secretkey: nGZoSFnJ0DDxLfK/qMpzMQwmLWkvP+gfx3YkrB8ZXwPy6ICBKZMBr9/kqKV4tRpiq0G3Y8i3nBC+8Cd2p3HMS77xAalTeyN5leHzCznkzXiQByOHGPJKJIeRjcGbO5eZsz8II4CTrJMQBsJbdWhnU2HnJAFKHfmYOMRrrP5/lqw=
+
+- name: Create metallb ConfigMap
+  community.kubernetes.k8s:
+    state: present
+    definition:
+      apiVersion: v1
+        kind: ConfigMap
+        metadata:
+          namespace: metallb-system
+          name: config
+        data:
+          config: |
+            address-pools:
+            - name: default
+              protocol: layer2
+              addresses:
+              - 192.168.50.240-192.168.50.250
