--- a/kubernetes-cluster-conf/ingress.yaml
+++ b/kubernetes-cluster-conf/ingress.yaml
@@ -1,23 +1,28 @@
 apiVersion: networking.k8s.io/v1
 kind: Ingress
 metadata:
-    name: ingress-rules
-    annotations:
-      kubernetes.io/ingress.class: nginx
+  name: ingress-rules
+  annotations:
+    kubernetes.io/ingress.class: nginx
 spec:
   rules:
-  - http:
-      paths:
-      - path: /
-        backend:
-          service:
-            name: app-service
-            port:
-              number: 80
-      - path: /db
-        backend:
-          service:
-            name: pma-service
-            port:
-              number: 80
-                
+    - host: camagru.com
+      http:
+        paths:
+          - path: /
+            pathType: Prefix
+            backend:
+              service:
+                name: app-service
+                port:
+                  number: 80
+    - host: db.camagru.com
+      http:
+        paths:
+          - path: /
+            pathType: Prefix
+            backend:
+              service:
+                name: pma-service
+                port:
+                  number: 80
