self signed certs for https ingress + nginx config change for php server parameters

--- a/kubernetes-cluster-conf/ingress.yaml
+++ b/kubernetes-cluster-conf/ingress.yaml
@@ -5,6 +5,11 @@ metadata:
   annotations:
     kubernetes.io/ingress.class: nginx
 spec:
+  tls:
+    - hosts:
+        - camagru.com
+        - db.camagru.com
+      secretName: camagru-secret-tls
   rules:
     - host: camagru.com
       http:
