--- a/kubernetes-cluster-conf/nginx-configmap.yaml
+++ b/kubernetes-cluster-conf/nginx-configmap.yaml
@@ -21,6 +21,7 @@ data:
           include fastcgi_params;
           fastcgi_param SCRIPT_FILENAME $document_root$fastcgi_script_name;
           fastcgi_param PATH_INFO $fastcgi_path_info;
+          fastcgi_param DOCUMENT_ROOT $document_root;
       }
 
       location /public/ {
@@ -34,5 +35,6 @@ data:
           include fastcgi_params;
           fastcgi_param SCRIPT_FILENAME $document_root$fastcgi_script_name;
           fastcgi_param PATH_INFO $fastcgi_path_info;
+          fastcgi_param DOCUMENT_ROOT $document_root;
         }
     }
