--- a/deployment/playbook.yaml
+++ b/deployment/playbook.yaml
@@ -1,12 +1,19 @@
 - name: k8s-cluster-init-master
   hosts: masters
   roles:
-    - {role: k8s-cluster-init/masters}
+    - { role: k8s-cluster-init/masters }
 
 - name: k8s-cluster-init-worker
   hosts: workers
   roles:
-    - {role: k8s-cluster-init/workers}
+    - { role: k8s-cluster-init/workers }
 
-# - name: k8s-app-deploy
-#   hosts: all
+- name: k8s-app-deploy
+  hosts: masters
+  roles:
+    - { role: app-deployment/mysql }
+    - { role: app-deployment/k8s-dashboard }
+    - { role: app-deployment/phpmyadmin }
+    - { role: app-deployment/camagru }
+  tags:
+    - toto
