--- a/deployment/dev/provisioning/Vagrantfile
+++ b/deployment/dev/provisioning/Vagrantfile
@@ -4,7 +4,7 @@
 IMAGE_NAME = "ubuntu/focal64"       # Image to use
 
 MASTER_MEM = 2048                   # Amount of RAM for master
-MASTER_CPU = 1.8                    # Number of processors for master (Minimum value of 2 otherwise it will not work)
+MASTER_CPU = 2                      # Number of processors for master (Minimum value of 2 otherwise it will not work)
 MASTER_NAME="master"                # Master node name
 
 WORKER_MEM = 1024                   # Number of processors for workers
@@ -16,36 +16,36 @@ NODE_NETWORK_BASE = "192.168.50"    # First three octets of the IP address that 
 Vagrant.configure("2") do |config|
     config.ssh.insert_key = false
     config.vm.base_mac = nil
-
+    
     # Master node config
     config.vm.define MASTER_NAME do |master|
         
-        # RAM and CPU config for master
-        config.vm.provider "virtualbox" do |v|
-            v.memory = MASTER_MEM
-            v.cpus = MASTER_CPU
-        end
-
         # Hostname and network config
         master.vm.box = IMAGE_NAME
         master.vm.network "private_network", ip: "#{NODE_NETWORK_BASE}.10"
         master.vm.hostname = MASTER_NAME
-    end
 
+        # RAM and CPU config for master
+        master.vm.provider "virtualbox" do |v|
+            v.memory = MASTER_MEM
+            v.cpus = MASTER_CPU
+        end
+    end
+    
     # Worker node config
     (1..WORKER_NBR).each do |i|
         config.vm.define "worker-#{i}" do |worker|
-
-            # RAM and CPU config for workers
-            config.vm.provider "virtualbox" do |v|
-                v.memory = WORKER_MEM
-                v.cpus = WORKER_CPU
-            end
-
+        
             # Hostname and network config
             worker.vm.box = IMAGE_NAME
             worker.vm.network "private_network", ip: "#{NODE_NETWORK_BASE}.#{i + 10}"
             worker.vm.hostname = "worker-#{i}"
+            
+            # RAM and CPU config for workers
+            worker.vm.provider "virtualbox" do |v|
+                v.memory = WORKER_MEM
+                v.cpus = WORKER_CPU
+            end
         end
     end
 end
