--- a/deployment/roles/app-deployment/common/tasks/main.yaml
+++ b/deployment/roles/app-deployment/common/tasks/main.yaml
@@ -12,11 +12,11 @@
       spec:
         tls:
           - hosts:
-              - camagru.com
-              - db.camagru.com
+              - allefebv.click
+              - db.allefebv.click
             secretName: camagru-secret-tls
         rules:
-          - host: camagru.com
+          - host: allefebv.click
             http:
               paths:
                 - path: /
@@ -26,7 +26,7 @@
                       name: app-service
                       port:
                         number: 80
-          - host: db.camagru.com
+          - host: db.allefebv.click
             http:
               paths:
                 - path: /
