--- a/deployment/roles/k8s-cluster-init/masters-flannel/tasks/main.yaml
+++ b/deployment/roles/k8s-cluster-init/masters-flannel/tasks/main.yaml
@@ -1,4 +1,4 @@
-- name: PodSecurityPolicy
+- name: flannel - PodSecurityPolicy
   community.kubernetes.k8s:
     state: present
     definition:
@@ -14,14 +14,14 @@
       spec:
         privileged: false
         volumes:
-        - configMap
-        - secret
-        - emptyDir
-        - hostPath
+          - configMap
+          - secret
+          - emptyDir
+          - hostPath
         allowedHostPaths:
-        - pathPrefix: "/etc/cni/net.d"
-        - pathPrefix: "/etc/kube-flannel"
-        - pathPrefix: "/run/flannel"
+          - pathPrefix: "/etc/cni/net.d"
+          - pathPrefix: "/etc/kube-flannel"
+          - pathPrefix: "/run/flannel"
         readOnlyRootFilesystem: false
         # Users and groups
         runAsUser:
@@ -34,7 +34,7 @@
         allowPrivilegeEscalation: false
         defaultAllowPrivilegeEscalation: false
         # Capabilities
-        allowedCapabilities: ['NET_ADMIN', 'NET_RAW']
+        allowedCapabilities: ["NET_ADMIN", "NET_RAW"]
         defaultAddCapabilities: []
         requiredDropCapabilities: []
         # Host namespaces
@@ -42,14 +42,14 @@
         hostIPC: false
         hostNetwork: true
         hostPorts:
-        - min: 0
-          max: 65535
+          - min: 0
+            max: 65535
         # SELinux
         seLinux:
           # SELinux is unused in CaaSP
-          rule: 'RunAsAny'
+          rule: "RunAsAny"
 
-- name: ClusterRole
+- name: flannel - ClusterRole
   community.kubernetes.k8s:
     state: present
     definition:
@@ -58,31 +58,31 @@
       metadata:
         name: flannel
       rules:
-      - apiGroups: ['extensions']
-        resources: ['podsecuritypolicies']
-        verbs: ['use']
-        resourceNames: ['psp.flannel.unprivileged']
-      - apiGroups:
-        - ""
-        resources:
-        - pods
-        verbs:
-        - get
-      - apiGroups:
-        - ""
-        resources:
-        - nodes
-        verbs:
-        - list
-        - watch
-      - apiGroups:
-        - ""
-        resources:
-        - nodes/status
-        verbs:
-        - patch
+        - apiGroups: ["extensions"]
+          resources: ["podsecuritypolicies"]
+          verbs: ["use"]
+          resourceNames: ["psp.flannel.unprivileged"]
+        - apiGroups:
+            - ""
+          resources:
+            - pods
+          verbs:
+            - get
+        - apiGroups:
+            - ""
+          resources:
+            - nodes
+          verbs:
+            - list
+            - watch
+        - apiGroups:
+            - ""
+          resources:
+            - nodes/status
+          verbs:
+            - patch
 
-- name: ClusterRoleBinding
+- name: flannel - ClusterRoleBinding
   community.kubernetes.k8s:
     state: present
     definition:
@@ -95,11 +95,11 @@
         kind: ClusterRole
         name: flannel
       subjects:
-      - kind: ServiceAccount
-        name: flannel
-        namespace: kube-system
+        - kind: ServiceAccount
+          name: flannel
+          namespace: kube-system
 
-- name: ServiceAccount
+- name: flannel - ServiceAccount
   community.kubernetes.k8s:
     state: present
     definition:
@@ -109,7 +109,7 @@
         name: flannel
         namespace: kube-system
 
-- name: ConfigMap
+- name: flannel - ConfigMap
   community.kubernetes.k8s:
     state: present
     definition:
@@ -150,7 +150,7 @@
             }
           }
 
-- name: DaemonSet
+- name: flannel - DaemonSet
   community.kubernetes.k8s:
     state: present
     definition:
@@ -176,72 +176,72 @@
               nodeAffinity:
                 requiredDuringSchedulingIgnoredDuringExecution:
                   nodeSelectorTerms:
-                  - matchExpressions:
-                    - key: kubernetes.io/os
-                      operator: In
-                      values:
-                      - linux
+                    - matchExpressions:
+                        - key: kubernetes.io/os
+                          operator: In
+                          values:
+                            - linux
             hostNetwork: true
             priorityClassName: system-node-critical
             tolerations:
-            - operator: Exists
-              effect: NoSchedule
+              - operator: Exists
+                effect: NoSchedule
             serviceAccountName: flannel
             initContainers:
-            - name: install-cni
-              image: quay.io/coreos/flannel:v0.14.0-rc1
-              command:
-              - cp
-              args:
-              - -f
-              - /etc/kube-flannel/cni-conf.json
-              - /etc/cni/net.d/10-flannel.conflist
-              volumeMounts:
-              - name: cni
-                mountPath: /etc/cni/net.d
-              - name: flannel-cfg
-                mountPath: /etc/kube-flannel/
+              - name: install-cni
+                image: quay.io/coreos/flannel:v0.14.0-rc1
+                command:
+                  - cp
+                args:
+                  - -f
+                  - /etc/kube-flannel/cni-conf.json
+                  - /etc/cni/net.d/10-flannel.conflist
+                volumeMounts:
+                  - name: cni
+                    mountPath: /etc/cni/net.d
+                  - name: flannel-cfg
+                    mountPath: /etc/kube-flannel/
             containers:
-            - name: kube-flannel
-              image: quay.io/coreos/flannel:v0.14.0-rc1
-              command:
-              - /opt/bin/flanneld
-              args:
-              - --ip-masq
-              - --kube-subnet-mgr
-              - --iface=enp0s8
-              resources:
-                requests:
-                  cpu: "100m"
-                  memory: "50Mi"
-                limits:
-                  cpu: "100m"
-                  memory: "50Mi"
-              securityContext:
-                privileged: false
-                capabilities:
-                  add: ["NET_ADMIN", "NET_RAW"]
-              env:
-              - name: POD_NAME
-                valueFrom:
-                  fieldRef:
-                    fieldPath: metadata.name
-              - name: POD_NAMESPACE
-                valueFrom:
-                  fieldRef:
-                    fieldPath: metadata.namespace
-              volumeMounts:
-              - name: run
-                mountPath: /run/flannel
-              - name: flannel-cfg
-                mountPath: /etc/kube-flannel/
+              - name: kube-flannel
+                image: quay.io/coreos/flannel:v0.14.0-rc1
+                command:
+                  - /opt/bin/flanneld
+                args:
+                  - --ip-masq
+                  - --kube-subnet-mgr
+                  - "--iface={{ network_interface }}"
+                resources:
+                  requests:
+                    cpu: "100m"
+                    memory: "50Mi"
+                  limits:
+                    cpu: "100m"
+                    memory: "50Mi"
+                securityContext:
+                  privileged: false
+                  capabilities:
+                    add: ["NET_ADMIN", "NET_RAW"]
+                env:
+                  - name: POD_NAME
+                    valueFrom:
+                      fieldRef:
+                        fieldPath: metadata.name
+                  - name: POD_NAMESPACE
+                    valueFrom:
+                      fieldRef:
+                        fieldPath: metadata.namespace
+                volumeMounts:
+                  - name: run
+                    mountPath: /run/flannel
+                  - name: flannel-cfg
+                    mountPath: /etc/kube-flannel/
             volumes:
-            - name: run
-              hostPath:
-                path: /run/flannel
-            - name: cni
-              hostPath:
-                path: /etc/cni/net.d
-            - name: flannel-cfg
-              configMap:
-                name: kube-flannel-cfg
+              - name: run
+                hostPath:
+                  path: /run/flannel
+              - name: cni
+                hostPath:
+                  path: /etc/cni/net.d
+              - name: flannel-cfg
+                configMap:
+                  name: kube-flannel-cfg
