--- a/.gitignore
+++ b/.gitignore
@@ -2,3 +2,4 @@ deployment/local/provisioning/.vagrant/
 alban_accessKeys.csv
 deployment/cloud/provisioning/*
 !deployment/cloud/provisioning/main.tf
+.vscode
