--- a/docker-conf/xdebug.ini
+++ b/docker-conf/xdebug.ini
@@ -1,16 +1,18 @@
-xdebug.mode=debug
 xdebug.idekey=VSCODE
-xdebug.start_with_request=yes
 
 ; -- v2
 ; xdebug.remote_host=6.tcp.ngrok.io
 ; xdebug.remote_port=19158
 ; xdebug.remote_connect_back=0
 ; xdebug.remote_log=/var/log/xdebug.log
+; xdebug.remote_enable=1
+; xdebug.remote_autostart=1
 
 
 ; -- v3
 xdebug.client_host=2.tcp.ngrok.io
-xdebug.client_port=18118
-xdebug.discover_client_host=0
+xdebug.client_port=16390
+; xdebug.discover_client_host=1
 xdebug.log=/var/log/xdebug.log
+xdebug.mode=debug
+xdebug.start_with_request=yes
