--- a/deployment/local/configuration/group_vars/all.yaml
+++ b/deployment/local/configuration/group_vars/all.yaml
@@ -3,3 +3,4 @@ ansible_user: "vagrant"
 user: "vagrant"
 ansible_private_key_file: "~/.vagrant.d/insecure_private_key"
 network_interface: "enp0s8"
+cloud_provider: ""
