--- a/deployment/roles/k8s-cluster-init/masters-init-cloud/files/config.yaml
+++ b/deployment/roles/k8s-cluster-init/masters-init-cloud/files/config.yaml
@@ -1,17 +1,10 @@
 apiVersion: kubeadm.k8s.io/v1beta2
 kind: ClusterConfiguration
 apiServer:
-clusterName: cloud-1
+  extraArgs:
+    cloud-provider: "external"
 controllerManager:
   extraArgs:
     configure-cloud-routes: "false"
+    cloud-provider: "external"
 kubernetesVersion: stable
-networking:
-  dnsDomain: cluster.local
-  serviceSubnet: 10.96.0.0/12
----
-apiVersion: kubeadm.k8s.io/v1beta2
-kind: InitConfiguration
-nodeRegistration:
-  kubeletExtraArgs:
-    cloud-provider: external
