rds local/cloud variabilization + rds dedup config

--- a/deployment/cloud/configuration/group_vars/all.yaml
+++ b/deployment/cloud/configuration/group_vars/all.yaml
@@ -2,3 +2,5 @@ ansible_user: "ubuntu"
 user: "ubuntu"
 network_interface: "eth0"
 cloud_provider: "external"
+protocol: "http"
+db_host: "terraform-20210525144032142100000001.cax0w8mzibuh.eu-west-3.rds.amazonaws.com"
