--- a/deployment/local/configuration/group_vars/all.yaml
+++ b/deployment/local/configuration/group_vars/all.yaml
@@ -4,3 +4,5 @@ user: "vagrant"
 ansible_private_key_file: "~/.vagrant.d/insecure_private_key"
 network_interface: "enp0s8"
 cloud_provider: ""
+protocol: "https"
+db_host: "mysql-service"
