--- a/deployment/roles/app-deployment/camagru/tasks/main.yaml
+++ b/deployment/roles/app-deployment/camagru/tasks/main.yaml
@@ -253,7 +253,7 @@
       data:
         config: |
           <?php
-            $DB_HOST = "terraform-20210524150219579800000001.cax0w8mzibuh.eu-west-3.rds.amazonaws.com";
+            $DB_HOST = "{{ db_host }}";
             $DB_PORT = "3306";
             $DB_NAME = "camagru";
             $DB_DSN_EXISTS = "mysql:host=" . $DB_HOST . ";port=" . $DB_PORT . ";dbname=" . $DB_NAME;
