--- a/deployment/roles/app-deployment/phpmyadmin/tasks/main.yaml
+++ b/deployment/roles/app-deployment/phpmyadmin/tasks/main.yaml
@@ -26,7 +26,7 @@
                   - containerPort: 80
                 env:
                   - name: PMA_HOST
-                    value: terraform-20210524150219579800000001.cax0w8mzibuh.eu-west-3.rds.amazonaws.com
+                    value: "{{ db_host }}"
                   - name: PMA_PORT
                     value: "3306"
 
