xdebug configmap instead of inside image + hostnames in inventory + s3 connection without hard coded credentials operationnal + bucket destroy force terraform + k8s provision NLB as TLS with ACM certificate

--- a/deployment/local/configuration/group_vars/all.yaml
+++ b/deployment/local/configuration/group_vars/all.yaml
@@ -6,3 +6,6 @@ network_interface: "enp0s8"
 cloud_provider: ""
 protocol: "https"
 db_host: "mysql-service"
+pma_host: "db.camagru.com"
+dashboard_host: "dashboard.camagru.com"
+app_host: "camagru.com"
