--- a/deployment/cloud/configuration/group_vars/all.yaml
+++ b/deployment/cloud/configuration/group_vars/all.yaml
@@ -3,4 +3,7 @@ user: "ubuntu"
 network_interface: "eth0"
 cloud_provider: "external"
 protocol: "http"
-db_host: "terraform-20210525144032142100000001.cax0w8mzibuh.eu-west-3.rds.amazonaws.com"
+db_host: "terraform-20210526100617992400000001.cax0w8mzibuh.eu-west-3.rds.amazonaws.com"
+pma_host: "db.allefebv.click"
+dashboard_host: "dashboard.allefebv.click"
+app_host: "allefebv.click"
