--- a/deployment/roles/app-deployment/k8s-dashboard/tasks/main.yaml
+++ b/deployment/roles/app-deployment/k8s-dashboard/tasks/main.yaml
@@ -388,7 +388,7 @@
         tls:
           - secretName: tls-secret # NON-EXISTENT
         rules:
-          - host: dashboard.allefebv.click
+          - host: "{{ dashboard_host }}"
             http:
               paths:
                 - path: /
